--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
 <body>
 
     <section class="people-slider" data-people-slider tabindex="-1">
-        <button type="button" class="people-slider__close" data-close>X</button>
+        <button type="button" class="people-slider__close" data-close></button>
         <!-- Slider main container -->
         <div class="swiper-container people-slider__container">
             <!-- Additional required wrapper -->
@@ -109,151 +109,153 @@
         <div>
             <h2 class="h1">Meet our team</h2>
         </div>
-
         <div class="people__grid">
+            <div class="columns is-centered is-8">
 
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_01.jpg');">
-
+                <div class="people__item column">
+                    <div class="people__avatar-wrapper">
+                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_01.jpg');">
+                            <span class="readers-only">Basia Sołtysińska</span>
+                        </div>
+                        <a class="people__mail" href="#"></a>
                     </div>
-                    <a class="people__mail"></a>
+                    <div class="people__description">
+                        <h3 class="people__name">Basia Sołtysińska</h3>
+                        <h4 class="people__title">Founder</h4>
+                        <h4 class="people__location">Warsaw</h4>
+                    </div>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">Basia Sołtysińska</h3>
-                    <h4 class="people__title">Founder</h4>
-                    <h4 class="people__location">Warsaw</h4>
+
+                <div class="people__item column">
+                    <div class="people__avatar-wrapper">
+                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_02.jpg');">
+                            <span class="readers-only">Włas Chowaniec</span>
+                        </div>
+                        <a class="people__mail" href="#"></a>
+                    </div>
+                    <div class="people__description">
+                        <h3 class="people__name">Włas Chowaniec</h3>
+                        <h4 class="people__title">Founder</h4>
+                        <h4 class="people__location">Warsaw</h4>
+                    </div>
+                </div>
+
+                <div class="people__item column">
+                    <div class="people__avatar-wrapper">
+                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_03.jpg');">
+                            <span class="readers-only">Edyta Leśniewska</span>
+                        </div>
+                        <a class="people__mail" href="#"></a>
+                    </div>
+                    <div class="people__description">
+                        <h3 class="people__name">Edyta Leśniewska</h3>
+                        <h4 class="people__title">Head of Human Resources</h4>
+                        <h4 class="people__location">Warsaw</h4>
+                    </div>
+                </div>
+
+                <div class="people__item column">
+                    <div class="people__avatar-wrapper">
+                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_04.jpg');">
+                            <span class="readers-only">Joanna Pawluk</span>
+                        </div>
+                        <a class="people__mail" href="#"></a>
+                    </div>
+                    <div class="people__description">
+                        <h3 class="people__name">Joanna Pawluk</h3>
+                        <h4 class="people__title">Chief Growth Officer (CGO)</h4>
+                        <h4 class="people__location">London</h4>
+                    </div>
+                </div>
+
+                <div class="people__item column">
+                    <div class="people__avatar-wrapper">
+                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_05.jpg');">
+                            <span class="readers-only">David Saunders</span>
+                        </div>
+                        <a class="people__mail" href="#"></a>
+                    </div>
+                    <div class="people__description">
+                        <h3 class="people__name">David Saunders</h3>
+                        <h4 class="people__title">Business Development</h4>
+                        <h4 class="people__location">London</h4>
+                    </div>
                 </div>
             </div>
-
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_02.jpg');">
-
+            <div class="columns is-centered is-variable is-8">
+                <div class="people__item column ">
+                    <div class="people__avatar-wrapper ">
+                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_01.jpg'); ">
+                            <span class="readers-only ">Adam Eldridge</span>
+                        </div>
+                        <a class="people__mail " href="# "></a>
                     </div>
-                    <a class="people__mail"></a>
-                </div>
-                <div class="people__description">
-                    <h3 class="people__name">Włas Chowaniec</h3>
-                    <h4 class="people__title">Founder</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
-            </div>
-
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_03.jpg');">
-
+                    <div class="people__description ">
+                        <h3 class="people__name ">Adam Eldridge</h3>
+                        <h4 class="people__title ">Business Development Director US</h4>
+                        <h4 class="people__location ">Los Angeles</h4>
                     </div>
-                    <a class="people__mail"></a>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">Edyta Leśniewska</h3>
-                    <h4 class="people__title">Head of Human Resources</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
-            </div>
 
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_04.jpg');">
-
+                <div class="people__item column ">
+                    <div class="people__avatar-wrapper ">
+                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_02.jpg'); ">
+                            <span class="readers-only ">Maha Mahda</span>
+                        </div>
+                        <a class="people__mail " href="# "></a>
                     </div>
-                    <a class="people__mail"></a>
-                </div>
-                <div class="people__description">
-                    <h3 class="people__name">Joanna Pawluk</h3>
-                    <h4 class="people__title">Chief Growth Officer (CGO)</h4>
-                    <h4 class="people__location">London</h4>
-                </div>
-            </div>
-
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_05.jpg');">
-
+                    <div class="people__description ">
+                        <h3 class="people__name ">Maha Mahda</h3>
+                        <h4 class="people__title ">Chief Business Development Officer (CBDO)</h4>
+                        <h4 class="people__location ">Warsaw</h4>
                     </div>
-                    <a class="people__mail"></a>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">David Saunders</h3>
-                    <h4 class="people__title">Business Development</h4>
-                    <h4 class="people__location">London</h4>
-                </div>
-            </div>
 
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_01.jpg');">
-
+                <div class="people__item column ">
+                    <div class="people__avatar-wrapper ">
+                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_03.jpg'); ">
+                            <span class="readers-only ">Elżbieta Kamińska</span>
+                        </div>
+                        <a class="people__mail " href="# "></a>
                     </div>
-                    <a class="people__mail"></a>
-                </div>
-                <div class="people__description">
-                    <h3 class="people__name">Adam Eldridge</h3>
-                    <h4 class="people__title">Business Development Director US</h4>
-                    <h4 class="people__location">Los Angeles</h4>
-                </div>
-            </div>
-
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_02.jpg');">
-
+                    <div class="people__description ">
+                        <h3 class="people__name ">Elżbieta Kamińska</h3>
+                        <h4 class="people__title ">International Client Service Manager</h4>
+                        <h4 class="people__location ">Warsaw</h4>
                     </div>
-                    <a class="people__mail"></a>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">Maha Mahda</h3>
-                    <h4 class="people__title">Chief Business Development Officer (CBDO)</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
-            </div>
 
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_03.jpg');">
-
+                <div class="people__item column ">
+                    <div class="people__avatar-wrapper ">
+                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
+                            <span class="readers-only ">Karolina Makuch</span>
+                        </div>
+                        <a class="people__mail " href="# "></a>
                     </div>
-                    <a class="people__mail"></a>
-                </div>
-                <div class="people__description">
-                    <h3 class="people__name">Elżbieta Kamińska</h3>
-                    <h4 class="people__title">International Client Service Manager</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
-            </div>
-
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_04.jpg');">
-
+                    <div class="people__description ">
+                        <h3 class="people__name ">Karolina Makuch</h3>
+                        <h4 class="people__title ">Creation Manager</h4>
+                        <h4 class="people__location ">Warsaw</h4>
                     </div>
-                    <a class="people__mail"></a>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">Karolina Makuch</h3>
-                    <h4 class="people__title">Creation Manager</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
-            </div>
 
-            <div class="people__item">
-                <div class="people__avatar-wrapper">
-                    <div class="people__avatar" data-person style="background-image: url('assets/images/person_04.jpg');">
-
+                <div class="people__item column ">
+                    <div class="people__avatar-wrapper ">
+                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
+                            <span class="readers-only ">Kamil Bolek</span>
+                        </div>
+                        <a class="people__mail " href="# "></a>
                     </div>
-                    <a class="people__mail"></a>
+                    <div class="people__description ">
+                        <h3 class="people__name ">Kamil Bolek</h3>
+                        <h4 class="people__title ">Head of Communication</h4>
+                        <h4 class="people__location ">Warsaw</h4>
+                    </div>
                 </div>
-                <div class="people__description">
-                    <h3 class="people__name">Kamil Bolek</h3>
-                    <h4 class="people__title">Head of Communication</h4>
-                    <h4 class="people__location">Warsaw</h4>
-                </div>
+
+
+
             </div>
-
-
-
         </div>
     </section>
 
