--- a/src/template.html
+++ b/src/template.html
@@ -110,9 +110,9 @@
             <h2 class="h1">Meet our team</h2>
         </div>
         <div class="people__grid">
-            <div class="columns is-centered is-8">
+            <div class="columns is-centered  ">
 
-                <div class="people__item column">
+                <div class="people__item column  ">
                     <div class="people__avatar-wrapper">
                         <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_01.jpg');">
                             <span class="readers-only">Basia Sołtysińska</span>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
 
-                <div class="people__item column">
+                <div class="people__item column  ">
                     <div class="people__avatar-wrapper">
                         <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_02.jpg');">
                             <span class="readers-only">Włas Chowaniec</span>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
 
-                <div class="people__item column">
+                <div class="people__item column  ">
                     <div class="people__avatar-wrapper">
                         <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_03.jpg');">
                             <span class="readers-only">Edyta Leśniewska</span>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
 
-                <div class="people__item column">
+                <div class="people__item column  ">
                     <div class="people__avatar-wrapper">
                         <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_04.jpg');">
                             <span class="readers-only">Joanna Pawluk</span>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
 
-                <div class="people__item column">
+                <div class="people__item column  ">
                     <div class="people__avatar-wrapper">
                         <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_05.jpg');">
                             <span class="readers-only">David Saunders</span>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </div>
-            <div class="columns is-centered is-variable is-8">
+            <div class="columns is-centered    ">
                 <div class="people__item column ">
                     <div class="people__avatar-wrapper ">
                         <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_01.jpg'); ">
