--- a/src/template.html
+++ b/src/template.html
@@ -24,70 +24,70 @@
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
                         <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 01</h2>
+                        <h2 class="people-slider__name">Basia Sołtysińska</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
                         <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 02</h2>
+                        <h2 class="people-slider__name">Włas Chowaniec</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 03</h2>
+                        <h3 class="people-slider__title">Head of Human Resources</h3>
+                        <h2 class="people-slider__name">Edyta Leśniewska</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 04</h2>
+                        <h3 class="people-slider__title">Chief Growth Officer (CGO)</h3>
+                        <h2 class="people-slider__name">Joanna Pawluk</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 05</h2>
+                        <h3 class="people-slider__title">Business Development</h3>
+                        <h2 class="people-slider__name">David Saunders</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 06</h2>
+                        <h3 class="people-slider__title">Business Development Director US</h3>
+                        <h2 class="people-slider__name">Adam Eldridge</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 07</h2>
+                        <h3 class="people-slider__title">Chief Business Development Officer (CBDO)</h3>
+                        <h2 class="people-slider__name">Maha Mahda</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 08</h2>
+                        <h3 class="people-slider__title">International Client Service Manager</h3>
+                        <h2 class="people-slider__name">Elżbieta Kamińska</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 09</h2>
+                        <h3 class="people-slider__title">Creation Manager</h3>
+                        <h2 class="people-slider__name">Karolina Makuch</h2>
                     </div>
                 </div>
 
                 <div class="swiper-slide people-slider__slide">
                     <div class="people-slider__wrapper">
-                        <h3 class="people-slider__title">Founder</h3>
-                        <h2 class="people-slider__name">Basia Sołtysińka 10</h2>
+                        <h3 class="people-slider__title">Head of Communication</h3>
+                        <h2 class="people-slider__name">Kamil Bolek</h2>
                     </div>
                 </div>
 
