--- a/src/template.html
+++ b/src/template.html
@@ -110,13 +110,13 @@
             <h2 class="h1">Meet our team</h2>
         </div>
         <div class="people__grid">
-            <div class="columns is-centered  ">
+            <div class="columns is-centered is-multiline">
 
-                <div class="people__item column  ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet ">
                     <div class="people__avatar-wrapper">
-                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_01.jpg');">
+                        <button class="people__avatar" data-person style="background-image: url('assets/images/person_01.jpg');">
                             <span class="readers-only">Basia Sołtysińska</span>
-                        </div>
+                         </button>
                         <a class="people__mail" href="#"></a>
                     </div>
                     <div class="people__description">
@@ -126,11 +126,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column  ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet ">
                     <div class="people__avatar-wrapper">
-                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_02.jpg');">
+                        <button class="people__avatar" data-person style="background-image: url('assets/images/person_02.jpg');">
                             <span class="readers-only">Włas Chowaniec</span>
-                        </div>
+                         </button>
                         <a class="people__mail" href="#"></a>
                     </div>
                     <div class="people__description">
@@ -140,11 +140,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column  ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet ">
                     <div class="people__avatar-wrapper">
-                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_03.jpg');">
+                        <button class="people__avatar" data-person style="background-image: url('assets/images/person_03.jpg');">
                             <span class="readers-only">Edyta Leśniewska</span>
-                        </div>
+                         </button>
                         <a class="people__mail" href="#"></a>
                     </div>
                     <div class="people__description">
@@ -154,11 +154,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column  ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet ">
                     <div class="people__avatar-wrapper">
-                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_04.jpg');">
+                        <button class="people__avatar" data-person style="background-image: url('assets/images/person_04.jpg');">
                             <span class="readers-only">Joanna Pawluk</span>
-                        </div>
+                         </button>
                         <a class="people__mail" href="#"></a>
                     </div>
                     <div class="people__description">
@@ -168,11 +168,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column  ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet ">
                     <div class="people__avatar-wrapper">
-                        <div class="people__avatar" tabindex="0" data-person style="background-image: url('assets/images/person_05.jpg');">
+                        <button class="people__avatar" data-person style="background-image: url('assets/images/person_05.jpg');">
                             <span class="readers-only">David Saunders</span>
-                        </div>
+                         </button>
                         <a class="people__mail" href="#"></a>
                     </div>
                     <div class="people__description">
@@ -181,13 +181,12 @@
                         <h4 class="people__location">London</h4>
                     </div>
                 </div>
-            </div>
-            <div class="columns is-centered    ">
-                <div class="people__item column ">
+
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                     <div class="people__avatar-wrapper ">
-                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_01.jpg'); ">
+                        <button class="people__avatar" data-person style="background-image: url( 'assets/images/person_01.jpg'); ">
                             <span class="readers-only ">Adam Eldridge</span>
-                        </div>
+                         </button>
                         <a class="people__mail " href="# "></a>
                     </div>
                     <div class="people__description ">
@@ -197,11 +196,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                     <div class="people__avatar-wrapper ">
-                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_02.jpg'); ">
+                        <button class="people__avatar" data-person style="background-image: url( 'assets/images/person_02.jpg'); ">
                             <span class="readers-only ">Maha Mahda</span>
-                        </div>
+                         </button>
                         <a class="people__mail " href="# "></a>
                     </div>
                     <div class="people__description ">
@@ -211,11 +210,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                     <div class="people__avatar-wrapper ">
-                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_03.jpg'); ">
+                        <button class="people__avatar" data-person style="background-image: url( 'assets/images/person_03.jpg'); ">
                             <span class="readers-only ">Elżbieta Kamińska</span>
-                        </div>
+                         </button>
                         <a class="people__mail " href="# "></a>
                     </div>
                     <div class="people__description ">
@@ -225,11 +224,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                     <div class="people__avatar-wrapper ">
-                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
+                        <button class="people__avatar" data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
                             <span class="readers-only ">Karolina Makuch</span>
-                        </div>
+                         </button>
                         <a class="people__mail " href="# "></a>
                     </div>
                     <div class="people__description ">
@@ -239,11 +238,11 @@
                     </div>
                 </div>
 
-                <div class="people__item column ">
+                <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                     <div class="people__avatar-wrapper ">
-                        <div class="people__avatar " tabindex="0 " data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
+                        <button class="people__avatar" data-person style="background-image: url( 'assets/images/person_04.jpg'); ">
                             <span class="readers-only ">Kamil Bolek</span>
-                        </div>
+                         </button>
                         <a class="people__mail " href="# "></a>
                     </div>
                     <div class="people__description ">
