--- a/src/template.html
+++ b/src/template.html
@@ -121,8 +121,8 @@
                     </div>
                     <div class="people__description">
                         <h3 class="people__name">Basia Sołtysińska</h3>
-                        <h4 class="people__title">Founder</h4>
-                        <h4 class="people__location">Warsaw</h4>
+                        <h4 class="people__title h4">Founder</h4>
+                        <h4 class="people__location h4">Warsaw</h4>
                     </div>
                 </div>
 
@@ -135,8 +135,8 @@
                     </div>
                     <div class="people__description">
                         <h3 class="people__name">Włas Chowaniec</h3>
-                        <h4 class="people__title">Founder</h4>
-                        <h4 class="people__location">Warsaw</h4>
+                        <h4 class="people__title h4">Founder</h4>
+                        <h4 class="people__location h4">Warsaw</h4>
                     </div>
                 </div>
 
@@ -149,8 +149,8 @@
                     </div>
                     <div class="people__description">
                         <h3 class="people__name">Edyta Leśniewska</h3>
-                        <h4 class="people__title">Head of Human Resources</h4>
-                        <h4 class="people__location">Warsaw</h4>
+                        <h4 class="people__title h4">Head of Human Resources</h4>
+                        <h4 class="people__location h4">Warsaw</h4>
                     </div>
                 </div>
 
@@ -163,8 +163,8 @@
                     </div>
                     <div class="people__description">
                         <h3 class="people__name">Joanna Pawluk</h3>
-                        <h4 class="people__title">Chief Growth Officer (CGO)</h4>
-                        <h4 class="people__location">London</h4>
+                        <h4 class="people__title h4">Chief Growth Officer (CGO)</h4>
+                        <h4 class="people__location h4">London</h4>
                     </div>
                 </div>
 
@@ -177,8 +177,8 @@
                     </div>
                     <div class="people__description">
                         <h3 class="people__name">David Saunders</h3>
-                        <h4 class="people__title">Business Development</h4>
-                        <h4 class="people__location">London</h4>
+                        <h4 class="people__title h4">Business Development</h4>
+                        <h4 class="people__location h4">London</h4>
                     </div>
                 </div>
 
@@ -191,8 +191,8 @@
                     </div>
                     <div class="people__description ">
                         <h3 class="people__name ">Adam Eldridge</h3>
-                        <h4 class="people__title ">Business Development Director US</h4>
-                        <h4 class="people__location ">Los Angeles</h4>
+                        <h4 class="people__title h4 ">Business Development Director US</h4>
+                        <h4 class="people__location h4 ">Los Angeles</h4>
                     </div>
                 </div>
 
@@ -205,8 +205,8 @@
                     </div>
                     <div class="people__description ">
                         <h3 class="people__name ">Maha Mahda</h3>
-                        <h4 class="people__title ">Chief Business Development Officer (CBDO)</h4>
-                        <h4 class="people__location ">Warsaw</h4>
+                        <h4 class="people__title h4 ">Chief Business Development Officer (CBDO)</h4>
+                        <h4 class="people__location h4 ">Warsaw</h4>
                     </div>
                 </div>
 
@@ -219,8 +219,8 @@
                     </div>
                     <div class="people__description ">
                         <h3 class="people__name ">Elżbieta Kamińska</h3>
-                        <h4 class="people__title ">International Client Service Manager</h4>
-                        <h4 class="people__location ">Warsaw</h4>
+                        <h4 class="people__title h4 ">International Client Service Manager</h4>
+                        <h4 class="people__location h4 ">Warsaw</h4>
                     </div>
                 </div>
 
@@ -233,8 +233,8 @@
                     </div>
                     <div class="people__description ">
                         <h3 class="people__name ">Karolina Makuch</h3>
-                        <h4 class="people__title ">Creation Manager</h4>
-                        <h4 class="people__location ">Warsaw</h4>
+                        <h4 class="people__title h4 ">Creation Manager</h4>
+                        <h4 class="people__location h4 ">Warsaw</h4>
                     </div>
                 </div>
 
@@ -247,8 +247,8 @@
                     </div>
                     <div class="people__description ">
                         <h3 class="people__name ">Kamil Bolek</h3>
-                        <h4 class="people__title ">Head of Communication</h4>
-                        <h4 class="people__location ">Warsaw</h4>
+                        <h4 class="people__title h4 ">Head of Communication</h4>
+                        <h4 class="people__location h4 ">Warsaw</h4>
                     </div>
                 </div>
 
