--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                 <div class="people__avatar-wrapper">
                     <button class="people__avatar" data-person
-                            style="background-image: url('assetss/images/person_01.jpg');"><span
+                            style="background-image: url('assets/images/person_01.jpg');"><span
                             class="readers-only">Basia Sołtysińska</span></button>
                     <a class="people__mail" href="#"></a></div>
                 <div class="people__description"><h3 class="people__name">Basia Sołtysińska</h3><h4
@@ -79,7 +79,7 @@
             <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                 <div class="people__avatar-wrapper">
                     <button class="people__avatar" data-person
-                            style="background-image: url('assetss/images/person_02.jpg');"><span
+                            style="background-image: url('assets/images/person_02.jpg');"><span
                             class="readers-only">Włas Chowaniec</span></button>
                     <a class="people__mail" href="#"></a></div>
                 <div class="people__description"><h3 class="people__name">Włas Chowaniec</h3><h4
@@ -88,7 +88,7 @@
             <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                 <div class="people__avatar-wrapper">
                     <button class="people__avatar" data-person
-                            style="background-image: url('assetss/images/person_03.jpg');"><span
+                            style="background-image: url('assets/images/person_03.jpg');"><span
                             class="readers-only">Edyta Leśniewska</span></button>
                     <a class="people__mail" href="#"></a></div>
                 <div class="people__description"><h3 class="people__name">Edyta Leśniewska</h3><h4
@@ -98,7 +98,7 @@
             <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                 <div class="people__avatar-wrapper">
                     <button class="people__avatar" data-person
-                            style="background-image: url('assetss/images/person_04.jpg');"><span
+                            style="background-image: url('assets/images/person_04.jpg');"><span
                             class="readers-only">Joanna Pawluk</span></button>
                     <a class="people__mail" href="#"></a></div>
                 <div class="people__description"><h3 class="people__name">Joanna Pawluk</h3><h4
@@ -108,7 +108,7 @@
             <div class="people__item column is-one-fifth-desktop is-one-third-tablet">
                 <div class="people__avatar-wrapper">
                     <button class="people__avatar" data-person
-                            style="background-image: url('assetss/images/person_05.jpg');"><span
+                            style="background-image: url('assets/images/person_05.jpg');"><span
                             class="readers-only">David Saunders</span></button>
                     <a class="people__mail" href="#"></a></div>
                 <div class="people__description"><h3 class="people__name">David Saunders</h3><h4
